<resources>
    <string name="app_name">LaundryQ Partner</string>
    <string name="hint_email">Email</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="btn_login_txt">Masuk</string>
    <string name="txt_lupa_password">Lupa Password?</string>
    <string name="txt_belum_punya_akun">Belum punya akun?</string>
    <string name="btn_register_txt">Daftar</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="hint_no_tlp">Nomor Telepon</string>
    <string name="hint_konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="txt_sudah_punya_akun">Sudah punya akun?</string>
    <string name="btn_logout_txt">Keluar</string>
    <string name="btn_lanjut_txt">Lanjut</string>
    <string name="hint_alamat_lengkap">Alamat Lengkap</string>
    <string name="hint_alamat_detail">No. Rumah / Nama Gang</string>
    <string name="btn_set_location_txt">Atur Lokasi</string>
    <string name="txt_time_operasional">Waktu Operasional</string>
    <string name="txt_sunday">Minggu</string>
    <string name="txt_time_open">Jam Buka</string>
    <string name="txt_until">Sampai</string>
    <string name="txt_time_closed">Jam Tutup</string>
    <string name="txt_bed_cover">Bed Cover</string>
    <string name="txt_pcs">PCS</string>
    <string name="txt_rp">Rp.</string>
    <string name="txt_boneka">Boneka</string>
    <string name="txt_jas">Jas</string>
    <string name="txt_pakaian">Pakaian</string>
    <string name="txt_kg">KG</string>
    <string name="txt_sepatu">Sepatu</string>
    <string name="txt_delivery_order">Pesan Antar</string>
    <string name="txt_pesan_antar">
        Pesan Antar merupakan layanan yang diberikan oleh Laundry kepada pelanggan. Layanan ini
        bertujuan untuk mengambil dan mengantarkan cucian pelanggan sesuai dengan lokasi yang sudah
        ditentukan oleh pelanggan. Apakah Laundry anda menyediakan layanan ini?
    </string>
    <string name="txt_no">Tidak</string>
    <string name="txt_yes">Ya</string>
    <string name="txt_per">/</string>
    <string name="txt_foto_laundry">Foto Laundry</string>
    <string name="hint_laundry_name">Nama Laundry</string>
    <string name="hint_notlp_or_wa">Nomor Telepin / WhatsApp</string>
    <string name="hint_id_line">ID Line</string>
    <string name="txt_congratulation">Selamat</string>
    <string name="txt_congratulation_2">toko laundry anda sudah terdaftar di sistem kami. Laundry anda akan kami verifikasi terlebih dahulu, selama maksimal 1 hari kerja.</string>
    <string name="txt_0">0</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_daftar_order_title">Daftar Order</string>
    <string name="txt_laundry_profile">Laundry Profile</string>
    <string name="txt_washed">Cucian selesai hari ini</string>
    <string name="btn_title_laundry_detail">Detail Laundry</string>
    <string name="menu_cucian_title">Cucian</string>
    <string name="txt_account">Account</string>
    <string name="txt_logout">Keluar</string>
    <string name="btn_edit_profile_title">Edit Profile</string>
    <string name="txt_change_photo">Ubah Foto</string>
    <string name="txt_change_password">Ubah Password</string>
    <string name="menu_simpan_title">Simpan</string>
    <string name="activity_edit_profile_title">Edit Profile</string>
    <string name="txt_date_pickup">Tanggal pengambilan</string>
    <string name="txt_date_delivery">Tanggal pengiriman</string>
    <string name="btn_title_decline">Tolak</string>
    <string name="btn_title_acc">Terima</string>
    <string name="btn_title_update">Update</string>
    <string name="txt_status">Status</string>
    <string name="txt_date_finish">Tanggal selesai</string>
    <string name="txt_weight">Berat</string>
    <string name="txt_laundry_type">Jenis Cucian</string>
    <string name="txt_order_name">Nama pemesan</string>
    <string name="btn_detail">Detail</string>
    <string name="txt_time_delivery">Waktu pengiriman</string>
    <string name="txt_time_pickup">Waktu pengambilan</string>
    <string name="txt_delivery_address">Alamat pengiriman</string>
    <string name="txt_pickup_address">Alamat pengambilan</string>
    <string name="ttx_order_date">Tanggal order</string>
    <string name="txt_order_id">Order ID</string>
    <string name="btn_title_wash">Cuci</string>
    <string name="txt_total">Total Pembayaran</string>
    <string name="activity_detail_order_title">Rincian Pesanan</string>
    <string name="btn_title_finish">Selesai</string>
    <string name="txt_net_income">Pendapatan bersih</string>
    <string name="txt_admin_cost">Potongan admin</string>
    <string name="txt_laundry_open_close">Laundry sudah</string>
    <string name="txt_time_operational_1">Waktu\nOperasional</string>
    <string name="btn_title_save">Simpan</string>
    <string name="txt_laundry_history">Riwayat Cucian</string>
    <string name="txt_laundry_location">Lokasi\nLaundry</string>
    <string name="activity_time_operational_title">Waktu Operasional</string>
    <string name="activity_laundry_type_title">Jenis Cucian</string>
    <string name="activity_laundry_detail_title">Info Laundry</string>
    <string name="activity_map_title">Lokasi Laundry</string>
    <string name="txt_close">Tutup</string>
    <string name="menu_title_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
