<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_laundryq_big"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/img_logo"
        android:padding="16dp"
        android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/baseline_email_black_36"
                android:drawableStart="@drawable/baseline_email_black_36"
                android:drawablePadding="16dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_kata_sandi"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_black_36"
                android:drawableStart="@drawable/baseline_lock_black_36"
                android:drawablePadding="16dp"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_lupa_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lupa_password"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/btn_login_txt"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_transparant_effect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_belum_punya_akun"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/btn_register_txt"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_transparant_effect"/>


    </LinearLayout>

</RelativeLayout>