<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MapActivity">

    <include layout="@layout/custom_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_above="@+id/center"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btn_set_location"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:text="@string/btn_set_location_txt"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_set_location_effect" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/map_marker"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_alamat_lengkap"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_alamat_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_alamat_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_alamat_detail"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_title_save"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_transparant_effect"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</LinearLayout>