<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20072018152520"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray_4"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_order_name"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Naufal"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_laundry_type"
                        android:textSize="12sp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/tv_category_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Pakaian"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_status"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Pending"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="italic"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray_4"/>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_detail"
            android:background="@null"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</android.support.v7.widget.CardView>